Rename define HAVE_LIBAV->HAVE_FFMPEG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -485,7 +485,7 @@ if(ENCODE_FRAMEDUMPS)
   find_package(FFmpeg COMPONENTS avcodec avformat avutil swscale)
   if(FFmpeg_FOUND)
     message(STATUS "libav/ffmpeg found, enabling AVI frame dumps")
-    add_definitions(-DHAVE_LIBAV)
+    add_definitions(-DHAVE_FFMPEG)
   else()
     message(STATUS "libav/ffmpeg not found, disabling AVI frame dumps")
   endif()
